Import IGMs for only processes concerned (#37)
Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>